--- a/ocaml/labelled_func/labelled_func.opam
+++ b/ocaml/labelled_func/labelled_func.opam
@@ -10,8 +10,9 @@ homepage: "https://github.com/username/reponame"
 doc: "https://url/to/documentation"
 bug-reports: "https://github.com/username/reponame/issues"
 depends: [
+  "ocaml" {>= "4.14.0"}
   "dune" {>= "3.17"}
-  "ocaml"
+  "zarith"
   "odoc" {with-doc}
 ]
 build: [
